made some changes according to client's request
