# src/routers/orderRoute.js
@@ -1,10 +1,10 @@
 const express = require('express');
 const router = express.Router();
-const {authenticate} = require('../middleware/authentication')
+const {authenticate, identifyCustomer} = require('../middleware/authentication')
 
 const { createOrderController, getUserOrdersController } = require('../controllers/orderController');
 
-router.post('/', authenticate, createOrderController);
+router.post('/', identifyCustomer, createOrderController);
 router.get('/user', authenticate, getUserOrdersController);
 
 module.exports = router;
